Grace/tests/gibbs/errors/t156.grace
// ERROR = P1018
if (false) then {
}
elseif (.) then {
}
